# subtypes

./: README.md  dune-project  subtypes.opam
.github/workflows/: test.yml
lib/: arr.ml  diag.ml  diag.mli  dune  eq.ml  eq.mli  extras.ml  extras.mli  inter.ml  inter.mli  lzy.ml  subtypes.ml  subtypes.mli  weaken.ml  weaken.mli
tests/: arr.ml  diag_list.ml  dune  fin.ml  lzy.ml
