opam-version: "2.0"
name: "subtypes"
synopsis: "First-class subtypes for OCaml"
version: "dev"
maintainer: "yallop@gmail.com"
authors: ["Stephen Dolan" "Jeremy Yallop"]
homepage: "https://github.com/yallop/subtypes"
dev-repo: "git+https://github.com/yallop/subtypes.git"
bug-reports: "https://github.com/yallop/subtypes/issues"
license: "MIT"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
   "dune" {build}
   "ocaml-variants"
     { = "4.02.1+modular-implicits" | = "4.02.1+modular-implicits-ber" }
]
